# simple-allocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/benchmarks/: Common.h  Deque.cpp  List.cpp  ListHugeElement.cpp  Map.cpp  UnorderedMap.cpp  Vector.cpp
src/malloc-replacement/: Malloc.cpp
src/simple-allocator/: MemoryBlock.h  MemorySlot.h  MemoryTree.cpp  MemoryTree.h  SimpleAllocator.cpp  SimpleAllocator.h  SimpleAllocatorTraits.h
src/tests/: SimpleAllocatorTests.cpp
